# taylorcore

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: cpu_monitor.h  cpu_stats.h
src/: README.md  main.c  platform_selector.c
src/platform/macos/: cpu_monitor_macos.c
